--- a/index.html
+++ b/index.html
@@ -501,6 +501,30 @@
                             <audio preload="auto" controls>
                                 <source src="audio/Aap Ki Nazron Se Samjha-Cover By Kirti Panigrahi.mp4">
                             </audio>
+                            <div class="song-name">
+                                <p>02. Chandania Chhup Ja Na Re Kirti Panigrahi</p>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Chandania Chhup Ja Na Re Kirti Panigrahi.mp4">
+                            </audio>
+                            <div class="song-name">
+                                <p>03. Dekha Hai Pehli Bar Kirti Panigrahi</p>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Dekha Hai Pehli Bar Kirti Panigrahi.mp4">
+                            </audio>
+                            <div class="song-name">
+                                <p>04. Dhadak Title Song Kirti Panigrahi</p>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Dhadak Title Song Kirti Panigrahi.mp4">
+                            </audio>
+                            <div class="song-name">
+                                <p>05. Mere Khwabo Mein Jo Aye Kirti Panigrahi</p>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Mere Khwabo Mein Jo Aye Kirti Panigrahi.mp4">
+                            </audio>
                         </div>
                     </div>
                 </div>
