--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/Song.mp4">
+                                <source src="audio/Hume Aur Jeene Ki Chahat Na Hoti Kirti Panigrahi.mp4">
                             </audio>
                         </div>
 						<!-- Single Top Item -->
@@ -482,7 +482,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/Song.mp4">
+                                <source src="audio/Ajib Dastaan Hai Ye Kirti Panigrahi.mp4">
                             </audio>
                         </div>
 						<!-- Single Top Item -->
@@ -859,7 +859,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/Song.mp4">
+                                <source src="audio/Bhijei Dei Ja Thare Kirti Panigrahi.mp4">
                             </audio>
                         </div>
 						<!-- Single Top Item -->
