--- a/index.html
+++ b/index.html
@@ -285,6 +285,21 @@
                                 <source src="audio/Chupke Se Lag Ja Gale Kirti Panigrahi.mp4">
                             </audio>
                         </div>
+			<!-- Single Top Item -->
+                        <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="150ms">
+                            <div class="first-part d-flex align-items-center">
+                                <div class="thumbnail">
+                                    <img src="img/bg-img/wt8.jpg" alt="">
+                                </div>
+                                <div class="content-">
+                                    <h6>Aaj Me Upar</h6>
+                                    <p>Khamoshi</p>
+                                </div>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Aaj Main Upar Kirti Panigrahi.mp4">
+                            </audio>
+                        </div>
 
                         <!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="150ms">
@@ -315,6 +330,22 @@
                             </div>
                             <audio preload="auto" controls>
                                 <source src="audio/Aaj Phir Tum Pe Pyar Kirti Panigrahi.mp4">
+                            </audio>
+                        </div>
+
+                        <!-- Single Top Item -->
+                        <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="200ms">
+                            <div class="first-part d-flex align-items-center">
+                                <div class="thumbnail">
+                                    <img src="img/bg-img/wt9.jpg" alt="">
+                                </div>
+                                <div class="content-">
+                                    <h6>Do Naina Aur Ek Kahani</h6>
+                                    <p>Massom</p>
+                                </div>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Do Naina Aur Ek Kahani Kirti Panigrahi.mp4">
                             </audio>
                         </div>
 
