--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 <source src="audio/Ye Ratein Ye Mausam Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -411,7 +411,7 @@
                                 <source src="audio/Aap Ki Nazron Se Samjha-Cover By Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -426,7 +426,7 @@
                                 <source src="audio/Chandania Chhup Ja Na Re Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -441,7 +441,7 @@
                                 <source src="audio/Akhiyon Ke Jharokhon Se Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -456,7 +456,7 @@
                                 <source src="audio/Kaun Tujhe Yun Pyar Karega Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -471,7 +471,7 @@
                                 <source src="audio/Ae Mere Humsafar Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -486,7 +486,7 @@
                                 <source src="audio/Hume Aur Jeene Ki Chahat Na Hoti Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -501,7 +501,7 @@
                                 <source src="audio/Chookar Mere Man Ko Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -516,7 +516,7 @@
                                 <source src="audio/Ajib Dastaan Hai Ye Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -531,7 +531,7 @@
                                 <source src="audio/Rooth Ke Humse Kahin Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -546,7 +546,7 @@
                                 <source src="audio/Dhadak Title Song Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -561,7 +561,7 @@
                                 <source src="audio/Dekha Hai Pehli Bar Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -576,7 +576,7 @@
                                 <source src="audio/Madhuban Khushboo Deta Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -591,7 +591,7 @@
                                 <source src="audio/Badi Mushkil Hai Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -606,7 +606,7 @@
                                 <source src="audio/Na Kajre Ki Dhar Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -621,7 +621,7 @@
                                 <source src="audio/Mere Khwabo Mein Jo Aye Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -636,7 +636,7 @@
                                 <source src="audio/Chale Ana Cover Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -651,7 +651,7 @@
                                 <source src="audio/O Sajna Barkha Bahar Aayi Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -666,7 +666,7 @@
                                 <source src="audio/Kore Kore Sapne Mere Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -681,7 +681,7 @@
                                 <source src="audio/Surmayee Akhiyon Mein Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -696,7 +696,7 @@
                                 <source src="audio/Hai Rama Ye Kya Hua Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -711,7 +711,40 @@
                                 <source src="audio/Main Rang Sharbaton Ka Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			
+			<!-- Single Top Item -->
+                        <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
+                            <div class="first-part d-flex align-items-center">
+                                <div class="thumbnail">
+                                    <img src="img/bg-img/wt12.jpg" alt="">
+                                </div>
+                                <div class="content-">
+                                    <h6>Lag Ja Gale Ki Phir</h6>
+                                    <p>Woh Kaun Thi</p>
+                                </div>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Lag Ja Gale Ki Phir Ye Kirti Panigrahi.mp4">
+                            </audio>
+                        </div>
+			
+			<!-- Single Top Item -->
+                        <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
+                            <div class="first-part d-flex align-items-center">
+                                <div class="thumbnail">
+                                    <img src="img/bg-img/wt12.jpg" alt="">
+                                </div>
+                                <div class="content-">
+                                    <h6>Tune O Rangeele Kaisa Jadu Kiya</h6>
+                                    <p>Kudrat</p>
+                                </div>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Tune O Rangeele Kaisa Jadu Kiya Kirti Panigrahi.mp4">
+                            </audio>
+                        </div>
+    
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -726,7 +759,8 @@
                                 <source src="audio/Tu Pyar Ka Sagar Hai Kirti Panigrahi.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -741,7 +775,7 @@
                                 <source src="audio/Song.mp4">
                             </audio>
                         </div>
-						<!-- Single Top Item -->
+			<!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="350ms">
                             <div class="first-part d-flex align-items-center">
                                 <div class="thumbnail">
@@ -798,6 +832,23 @@
                                 <source src="audio/E Phula Kaha Thare Kirti Panigrahi.mp4">
                             </audio>
                         </div>
+			
+                        <!-- Single Top Item -->
+                        <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="200ms">
+                            <div class="first-part d-flex align-items-center">
+                                <div class="thumbnail">
+                                    <img src="img/bg-img/wt9.jpg" alt="">
+                                </div>
+                                <div class="content-">
+                                    <h6>Bhijei Dei Ja Thare</h6>
+                                    <p>Bapa Tame Bhari Dusta</p>
+                                </div>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/Bhijei Dei Ja Thare Kirti Panigrahi.mp4">
+                            </audio>
+                        </div>
+
 
                         <!-- Single Top Item -->
                         <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="200ms">
